# pymcssa

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: index.html  pymcssa.html  search.js
docs/pymcssa/: utils.html
pymcssa/: __init__.py  core.py  mcssa.py  ssa.py  utils.py
tests/: test_mcssa_methods.py  test_ssa.py
